hphp/hack/test/typecheck/trait_require_error_trait.php.exp
File "trait_require_error_trait.php", line 6, characters 19-20:
T1 is not a class. It is a trait. (NastCheck[3017])
