hphp/hack/test/typecheck/trait_require_error_trait.php
<?hh
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the BSD-style license found in the
 * LICENSE file in the "hack" directory of this source tree. An additional grant
 * of patent rights can be found in the PATENTS file in the same directory.
 *
 */

trait TR1 {}

trait TR2 {
  require extends TR1;

  public function foo(): void {
    return parent::foo();
  }
}
